--- a/data/spells/conjuration-05-ru3YdXajUREbKQDV.htm
+++ b/data/spells/conjuration-05-ru3YdXajUREbKQDV.htm
@@ -1,6 +1,6 @@
 Name: Return Beacon
-Nom: 
-État: aucune
+Nom: Phare de retour
+État: libre
 
 ------ Data ------
 RangeEN: 30 feet
@@ -14,3 +14,10 @@ RangeFR: 9 m
 <p><strong>Heightened (9th)</strong> The duration is 1 week and you can transport yourself to the beacon from anywhere on the same plane. In addition, you can bring up to 4 willing allies you touch with you when you transport to the beacon.</p>
 <p><strong>Heightened (10th)</strong> The duration is unlimited and you can transport yourself to the beacon from any distance, even across other planes. In addition, you can bring up to 8 willing allies you touch when you transport to the beacon.</p>
 ------ Description (fr) ------
+<p>Vous créez une balise planaire unique quelque part dans la portée du sort qui reste en place. La balise est invisible, sauf lorsqu'elle est détectée par détection de la magie, auquel cas elle ressemble à une tour de lumière vive de 3 mètres de large s'étirant dans le ciel. À tout moment pendant la durée de la balise, vous pouvez effectuer une activité d'une minute, dotée des traits Concentration et Manipulation, pour vous concentrer sur la balise et vous transporter, ainsi que les objets que vous portez, de votre espace actuel à l'emplacement de la balise. Le fait de se transporter de cette manière met fin au sort. Si cela devait amener une autre créature avec vous - même si vous la transportez dans un conteneur extradimensionnel - la balise s'effondre, mettant fin au sort, et la tentative de transport échoue.</p>
+<p>Lancer phare de retour alors qu'une balise est active a pour effet de mettre un terme à la précédente balise. Si vous n'êtes pas dans les 1,5 km de la balise, votre tentative pour retourner à la balise échoue. Si un objet solide est dans le même espace que la balise lorsque vous vous y transportez, vous arrivez dans la case libre la plus proche de la balise. S'il n'y a pas de case vide dans les 9 m de la balise, votre tentative pour vous transporter échoue, mais la balise reste intacte.</p>
+<hr />
+<p><strong>Intensifié (7e)</strong> La durée est de 8 heures et vous pouvez vous transportez vous-même à la balise à une distance de 150 km maximum.</p>
+<p><strong>Intensifié (8e)</strong> La durée est de 24 heures et vous pouvez vous transportez vous-même à la balise à une distance de 1500 km maximum. En outre, vous pouvez amener 1 allié volontaire que vous touchez avec vous lorsque vous vous transportez vers la balise.</p>
+<p><strong>Intensifié (9e)</strong> La durée est de 1 semaine et vous pouvez vous transporter de n'importe où sur le même plan. En outre, vous pouvez amener jusqu'à 4 alliés volontaires que vous touchez avec vous lorsque vous vous transportez jusqu'à la balise.</p>
+<p><strong>Intensifié (10e)</strong> La durée est illimitée et vous pouvez vous transportez vous même à la balise de n'importe quelle distance, même à travers les plans. De plus, vous pouvez transporter jusqu'à 8 alliés volontaires que vous touchez lorsque vous vous transportez jusqu'à la balise.</p>
