--- a/data/spells/necromancy-04-RbORUmnwlB8b3mNf.htm
+++ b/data/spells/necromancy-04-RbORUmnwlB8b3mNf.htm
@@ -23,3 +23,17 @@ TargetFR: 1 créature
 <p><strong>Stage 4</strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy 3} and flat-footed (1 day);</p>
 <p><strong>Stage 5</strong> death, and the target's body splits apart into a mass of fragments that crawls outward in a 10-foot-emanation before perishing, leaving a bare skeleton surrounded by gore.</p>
 ------ Description (fr) ------
+<p>Vous affligez la cible de la maladie surnaturelle connue sous le nom d'insurrection interne, amenant des portions de son corps à se rebeller contre l'ensemble, entraînant une agonie douloureuse et, à terme, la mort. La cible doit tenter un jet de Vigueur.</p>
+<hr />
+<p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
+</p><strong>Succès</strong> La cible devient @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} pendant 1 round tandis que la douleur s'empare de son corps.</p>
+</p><strong>Échec</strong> La cible est affligée par l'insurrection interne au stade 1.</p>
+</p><strong>Échec critique</strong> La cible est affligée par l'insurrection interne au stade 2.</p>
+<hr />
+<p><strong>Insurrection interne (maladie)</strong> ; Niveau 7.</p>
+<p>La cible ne peut récupérer de la condition maladroite liée à insurrection interne jusqu'à ce que la maladie soit soignée ;</p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit 1} (1 jour) ;</p>
+<p><strong>Stade 2</strong> Maladroit 2 (1 jour) ;</p>
+<p><strong>Stade 3</strong> Maladroit 2 and @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} (1 jour) ;</p>
+<p><strong>Stade 4</strong> Maladroit 3 et Pris au dépourvu (1 jour) ;</p>
+<p><strong>Stade 5</strong> la mort et le corps de la cible éclate en une masse de fragments qui rampent vers l'extérieur dans une émanation de 3m avant de périr, laissant un squelette complètement nu entoure par des restes.</p>
