--- a/data/spells/necromancy-04-hdzyDrRdHSse88XM.htm
+++ b/data/spells/necromancy-04-hdzyDrRdHSse88XM.htm
@@ -1,6 +1,6 @@
 Name: Extract Brain
-Nom: 
-État: aucune
+Nom: Extraction du cerveau
+État: libre
 
 ------ Data ------
 RangeEN: touch
@@ -23,3 +23,14 @@ SecondaryCheckFR: Médecine
 <p><strong>Heightened (8th)</strong> You can place the extracted brain into an inactive flesh golem on a critical success.</p>
 <p><strong>Heightened (9th)</strong> You can place the extracted brain into an inactive alchemical golem on a critical success.</p>
 ------ Description (fr) ------
+<p>Vous accomplissez une opération magique complexe sur une créature volontaire ou @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravée} ou un cadavre, en incisant délicatement le crâne et en retirant le cerveau de la créature sans endommager l'organe. Si vous avez un @Compendium[pf2e.equipment-srd.pRjJ2aBDpCH1NKRz]{cylindre cérébral} vide sous la main, vous pouvez y placer le cerveau extrait dans le cadre de ce rituel (cela inclut la préparation du cylindre cérébral pour son utilisation, comme le retrait d'un cerveau précédent et le remplissage du cylindre avec les fluides de conservation nécessaires pour le faire fonctionner).</p>
+<p>Autrement, à la discrétion du MJ, si vous avez sous la main un @Compendium[pf2e.pathfinder-bestiary-2.sbVdWfLZ2rdPh9Ec]{golem de charogne} presque achevé, vous pouvez placer le cerveau extrait dans le golem.</p>
+<p>Le corps d'une créature vivante soumise à ce rituel meurt, quel que soit le résultat du rituel, de même que le cerveau extrait s'il n'est pas placé dans un golem ou un cylindre (ou autrement préservé) dans les 3 rounds.</p>
+<hr />
+<p><strong>Succès critique</strong> Le rituel est réussi sur une créature vivante ou un cadavre qui est mort au cours des huit heures précédent le début du rituel. Si vous placez le cerveau dans un golem, le golem retient les souvenirs du cerveau, ainsi que ses scores de caractéristique mentales, son alignement et les compétences associées.</p>
+<p><strong>Succès</strong> Le rituel réussit sur une créature vivante ou un cadavre qui est mort depuis moins d'une heure avant le début du rituel.</p>
+<p><strong>Échec</strong> Le rituel échoue et le cerveau meurt.</p>
+<p><strong>Échec critique</strong> Le rituel semble réussir mais déforme le cerveau de façon méconnaissable en une entité hostile, permettant potentiellement à une intelligence étrangère de s'y infiltrer.</p>
+<hr />
+<p><strong>Intensifié (8e)</strong> Vous pouvez placer le cerveau extrait dans un golem de chair inactifen cas de succès critique.</p>
+<p><strong>Intensifié (9e)</strong> Vous pouvez placer le cerveau extrait dans un golem alchimique unactif en cas de succès critique.</p>
